--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -1,68 +1,217 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@layer reset {
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    /* Box sizing rules */
+    *,
+    *::before,
+    *::after {
+      box-sizing: border-box;
+    }
+    
+    /* Prevent font size inflation */
+    html {
+      -moz-text-size-adjust: none;
+      -webkit-text-size-adjust: none;
+      text-size-adjust: none;
+    }
+    
+    /* Remove default margin in favour of better control in authored CSS */
+    body, h1, h2, h3, h4, p,
+    figure, blockquote, dl, dd {
+      margin-block-end: 0;
+    }
+    
+    /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+    ul[role='list'],
+    ol[role='list'] {
+      list-style: none;
+    }
+    
+    /* Set core body defaults */
+    body {
+      min-height: 100vh;
+      line-height: 1.5;
+    }
+    
+    /* Set shorter line heights on headings and interactive elements */
+    h1, h2, h3, h4,
+    button, input, label {
+      line-height: 1.1;
+    }
+    
+    /* Balance text wrapping on headings */
+    h1, h2,
+    h3, h4 {
+      text-wrap: balance;
+    }
+    
+    /* A elements that don't have a class get default styles */
+    a:not([class]) {
+      text-decoration-skip-ink: auto;
+      color: currentColor;
+    }
+    
+    /* Make images easier to work with */
+    img,
+    picture {
+      max-width: 100%;
+      display: block;
+    }
+    
+    /* Inherit fonts for inputs and buttons */
+    input, button,
+    textarea, select {
+      font-family: inherit;
+      font-size: inherit;
+    }
+    
+    /* Make sure textareas without a rows attribute are not tiny */
+    textarea:not([rows]) {
+      min-height: 10em;
+    }
+    
+    /* Anything that has been anchored to should have extra scroll margin */
+    :target {
+      scroll-margin-block: 5ex;
+    }
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
+@layer base{
+  :root{
+    --clr-purple-600: #6954E9;
+    --clr-purple-500: #6954E990;
+    --clr-purple-300: #6954E903;
+    --clr-yellow-600: #EA9010;
+    --clr-green-600: #04BFDA;
+    --clr-white:#fff;
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
+    --clr-heading: #2C2B35;
+    --clr-subheading: #5B5656;
+    --clr-paragraph-600: #666666;
+    --clr-paragraph-500: #645E5E;
+  
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
+    --ff-body:"Inter", serif;
+    --ff-heading:"Raleway", serif;
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+    --fs-300: 0.875rem;
+    --fs-400: 1rem;
+    --fs-500:1.125rem;
+    --fs-600:1.25rem;
+    --fs-700:1.5rem;
+    --fs-800:2rem;
+    --fs-900:3.75rem;
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+
+    @media (width > 760px){
+      --fs-300: 0.875rem;
+      --fs-400: 1rem;
+      --fs-500:1.25rem;
+      --fs-600:1.5rem;
+      --fs-700:2rem;
+
+    }
   }
-  a:hover {
-    color: #747bff;
+
+    :root{
+
+      --text-paragraph-light: var(--clr-paragraph-500);
+      --text-paragraph: var(--clr-paragraph-600);
+      --text-high-contrast:500;
+      --text-important-header: var(--clr-purple-600);
+      --text-header:var(--clr-heading);
+      --text-subheader:var(--clr-subheading);
+      --background-main-extra-light: var(--clr-purple-300);
+      --background-main: var(--clr-white);
+
+      --font-size-sm: var(--fs-300);
+      --font-size-rg: var(--fs-400);
+      --font-size-md: var(--fs-500);
+      --font-size-lg:var(--fs-600);
+
+      --font-size-heading-sm:var(--fs-500);
+      --font-size-heading-rg: var(--fs-700);
+
+
+      --border-radius-sm: 1rem;
+      --border-radius-md: 1.56rem;
+    }
+
+    html{
+      font-family: var(--ff-body);
+      line-height: 1.6;
+      margin:1rem;
+    }
+
+    body{
+      font-size: var(--font-size-rg);
+      color: var(--text-paragraph);
+      background-color: var(--background-main);
+    }
+
+    .main-header{
+      font-family: var(--ff-heading);
+      font-size: var(--font-size-heading-rg);
+      color:var(--text-important-header);
+    }
+
+    .purple-header{
+      color:var(--clr-purple-600);
+      font-weight: 400;
+    }
+
+    .section-title{
+      font-size: var(--font-size--lg);
+      color: var(--text-header)
+    }
+
+    .section-subtitle{
+      color:var(--text-subheader);
+    }
+
+    a{
+      color:inherit
+    }
+
+    a:hover,
+    a:focus-visible{
+      color:var(--text-high-contrast);
+    }
+
+    a.active{
+      color:var(--clr-purple-500);
+    }
+
+
   }
-  button {
-    background-color: #f9f9f9;
+
+  @layer navbar{
+
+    .side-nav{
+      width: 90rem;
+    }
+
+    .logo{
+      width:150px;
+    }
+
+    .logo h3{
+      margin-top:0;
+    }
+
+    nav{
+      margin-top:40px ;
+    }
+
+    nav a{
+      text-decoration: none;
+      display: block;
+    }
   }
-}
+
+  @layer layout{
+    }
+
+
+
+
