resolved merge conflicts

--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -212,6 +212,18 @@
   @layer layout{
     }
 
+  @layer forms {
+    form{
+      display: flex;
+    }
+
+    label{
+      display: block;
+    }
+  }
+
+
+
 
 
 
