added css for custom form preview

--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -93,6 +93,7 @@
 
     --clr-border : #D9D9D9;
   
+    --clr-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
     --ff-body:"Inter", serif;
     --ff-heading:"Raleway", serif;
@@ -104,6 +105,7 @@
     --fs-700:1.5rem;
     --fs-800:2rem;
     --fs-900:3.75rem;
+
 
 
     @media (width > 760px){
@@ -230,6 +232,7 @@
 
     .side-nav{
       max-width: 268px;
+      margin-left:30px
     }
 
 
@@ -289,22 +292,10 @@
       height: 40px;
     }
 
-    .left-form-wrapper{
-      /* padding: 20px; */
-    }
-
-    .right-form-wrapper{
-      /* padding: 20px; */
-    }
-
     .wide-form-wrapper{
       grid-column-start: 1;
       grid-column-end: 3;
       margin-top: 10px;
-    }
-
-    label{
-      display: block;
     }
 
 
@@ -349,26 +340,49 @@
   }
 
 
-  .observation-details-form{
+  .observation-details-form,
+  #custom-form-preview{
 
     background-color: var(--clr-white);
     border-radius: var(--border-radius-md);
     display: grid;
     grid-template-columns: 1fr 1fr;
-    row-gap:15px
+    row-gap:15px;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    padding-top: 20px;
   }
 
-/* 
+  #custom-form-preview{
+    border-left: 4px solid var(--clr-green-600);
+    border-radius: var(--border-radius-sm);
+    box-shadow: var(--clr-shadow);
+    column-gap: 25px;
+    padding-inline: 15px;
+  }
+
   .single-input-wrapper{
-    width:50%;
     display: grid;
-    grid-template-columns: 1fr 30px;
+    grid-template-columns: 1fr .25fr;
   }
 
-  .single-input-wrapper>.check-rad{
+  .single-input-wrapper>input{
+    grid-column-start: 1fr;
+    grid-column-end: 3fr;
+  }
+
+  .check-rad-input-wrapper{
+    width: fit-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+
+
+  /* .single-input-wrapper>.check-rad{
     grid-column-start: 1;
     grid-column-end: 2;
-  } */
+  }  */
 
 
 
