--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -135,7 +135,7 @@
       --font-size-lg:var(--fs-600);
 
       --font-size-heading-sm:var(--fs-500);
-      --font-size-heading-rg: var(--fs-700);
+      --font-size-heading-rg: var(--fs-800);
 
 
       --border-radius-sm: 10px;
@@ -163,6 +163,12 @@
     .purple-header{
       color:var(--clr-purple-600);
       font-weight: 400;
+    }
+
+    .header{
+      font-size: var(--fs-700);
+      color:var(--clr-heading);
+      font-weight:600;
     }
 
     .section-title{
@@ -240,6 +246,7 @@
       max-width: 268px;
       margin-left:30px
     }
+
 
 
 
@@ -387,10 +394,10 @@
         border-radius: var(--border-radius-md);
         display: grid;
         grid-template-columns: 1fr 1fr;
-        row-gap:15px;
+        row-gap:20px;
         margin-bottom: 30px;
         padding-bottom: 20px;
-        padding-top: 20px;
+        padding-top: 40px;
       }
     
       #custom-form-preview{
@@ -417,6 +424,13 @@
         grid-template-columns: 1fr 1fr;
       }
 
+      #additional-field>p{
+        margin-bottom:20px;
+      }
+
+      .hide-icon{
+        visibility: hidden;
+      }
 
   }  
   
