Added custom hook to get class info, added a seedfile for classes to test chart, and added a Portal to show the chart when the page is /project

--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -248,6 +248,12 @@
       margin-left:30px
     }
 
+    #additional-page-content{
+      position:fixed;
+      bottom:0;
+      right:0
+    }
+
 
 
 
@@ -510,5 +516,7 @@
     padding-inline: 20px;
   }
 }
+
+
 
 
