--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -149,7 +149,9 @@
     }
 
     body{
-      display:flex;
+      display:grid;
+      grid-template-columns: 70% 1fr;
+      justify-content: space-between;
       flex-flow:wrap;
       font-size: var(--font-size-rg);
       color: var(--text-paragraph);
@@ -231,6 +233,18 @@
     nav a{
       text-decoration: none;
       display: block;
+      padding-bottom: 15px;
+    }
+
+    .logout-button{
+      border:none;
+      background-color: transparent;
+      font-family: var(--ff-body);
+      font-size: var(--font-size-rg);
+      color: var(--clr-paragraph-600);
+      text-align: left;
+      padding: 0;
+      padding-top:20px;
     }
   }
 
@@ -252,7 +266,7 @@
 
 
     .main-container{
-      max-width: 816px;
+      max-width: 820px;
       min-height: 500px;
       margin-inline: auto;
       margin-top: 40px;
@@ -456,6 +470,7 @@
     border-radius: var(--border-radius-md);
     padding: 30px;
     margin-top: 30px;
+    margin-bottom:50px;
     margin-inline: 15px;
     box-shadow: var(--clr-shadow);
   }
@@ -504,11 +519,13 @@
 
 @layer chart{
   .chart_wrapper{
-    width:330px;
-    height: 300px;
-    margin-top: 50px;
+    width:300px;
+    height: 280px;
+    margin-top: 60px;
+    margin: 30px;
     padding-inline: 20px;
   }
+
 }
 
 
