--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -150,7 +150,7 @@
 
     body{
       display:grid;
-      grid-template-columns: 70% 1fr;
+      grid-template-columns: 75% 1fr;
       justify-content: space-between;
       flex-flow:wrap;
       font-size: var(--font-size-rg);
@@ -176,8 +176,8 @@
     }
 
     .section-title{
-      font-size: var(--font-size--lg);
-      color: var(--text-header)
+      font-size: var(--font-size-lg);
+      color: var(--text-header);
     }
 
     .section-subtitle{
@@ -266,7 +266,7 @@
 
 
     .main-container{
-      max-width: 820px;
+      width: 700px;
       min-height: 500px;
       margin-inline: auto;
       margin-top: 40px;
@@ -277,8 +277,38 @@
       border-radius: var(--border-radius-sm);
     }
 
+    .section-container{
+      background-color: var(--clr-white);
+      padding:30px;
+      border-radius: var(--border-radius-md);
+      margin-top: 50px;
+      box-shadow: var(--clr-shadow);
+    }
+
+    .subsection-container{
+      background-color: var(--clr-white);
+      margin:15px;
+      box-shadow: var(--clr-shadow);
+      border-radius: var(--border-radius-sm);
+      padding:20px;
+      border-left: 4px solid var(--clr-purple-600);
+    }
+
+    .subsection-container > p{
+      margin-top: 0px;
+    }
+
     .right-container {
       width: 360px;
+    }
+
+    .projects-list > div{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .projects-list > div > button{
+      align-self: end;
     }
 
   }
@@ -287,6 +317,7 @@
     form{
       display: grid;
       grid-template-columns: 1fr 1fr;
+      row-gap: 10px;
       padding: 40px;
     }
 
@@ -326,6 +357,10 @@
       margin-top: 10px;
     }
 
+    .wide-form-wrapper >.button{
+      align-self: self-start;
+    }
+
 
     .check-rad{
       margin-top: 10px;
@@ -339,7 +374,74 @@
       height:20px;
       border: 2px solid var(--clr-border);
     }
+
+    .toggle-text{
+      color: var(--clr-paragraph-500);
+      font-size: var(--font-size-sm);
+    }
+
+    .auth-form{
+      display: flex;
+      flex-direction: column;
+      width: 400px;
+
+    }
+    .auth-form > input{
+      min-width:90%;
+      margin-inline: 5px;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      border: 2px solid var(--clr-border);
+      border-radius: var(--border-radius-sm);
+      color: var(--clr-paragraph-500);
+      font-size: small;
+      padding: 5px;
+    }
     
+  }
+
+  @layer tables{
+
+    table{
+      border-collapse: collapse;
+      border-radius: var(--border-radius-md);
+      background-color: var(--clr-white);
+    }
+
+    table td{
+      padding-bottom: 20px; 
+    }
+
+    thead{
+      background-color: #EA9010;
+      color: var(--clr-white);
+      height: 70px;
+      border-top-left-radius: var(--border-radius-md);
+    }
+
+    thead > tr{
+      padding: 15px;
+      border-top-left-radius: var(--border-radius-md);
+    }
+
+    tbody{
+      font-size: var(--font-size-rg);
+    }
+
+    td > a{
+      text-decoration: none;
+    }
+
+    th,td{
+      padding: 15px;
+      text-align: left;
+    }
+
+    tbody > tr:hover,
+    tbody > tr:focus-visible{
+      background-color: var(--clr-border);
+    }
+
   }
 
   @layer buttons{
@@ -356,8 +458,8 @@
       font-size: var(--font-size-sm);
       height: 2.5rem;
       border:none;
-      margin: 15px 5px;
-      padding: 0.5rem 1rem;
+      margin: 25px 5px;
+      padding: 1rem 2rem;
       max-width: fit-content;
     }
     .button:hover,
@@ -365,19 +467,36 @@
       background-color: #DA8813;
     }
 
+    .large{
+      width: 280px;
+    }
 
+    .medium {
+      width: 80px
+    }
+
+    .no-background{
+      background-color: var(--clr-white);
+      margin-bottom: 5px;
+      padding: 0.5rem 1rem ;
+      border-radius: var(--border-radius-md);
+      color: var(--clr-paragraph-500);
+      border: 2px solid var(--clr-border);
+    }
   }
 
   @layer projectView{
 
     .project-view{
-      padding: 30px;
+      padding: 15px;
       border-radius: var(--border-radius-md);
-      max-width: 90%;
-      margin: auto;
+      /* width: 90%; */
+      /* margin: auto; */
       background-color: var(--clr-white);
       display: grid;
-
+      margin:20px;
+      grid-column-start: 1;
+      grid-column-end: 3;
     }
 
     .project-view-main{
@@ -385,7 +504,7 @@
       grid-template-columns: 1fr 1fr 1fr 1fr;
       grid-template-rows: min-content 1fr min-content;
       row-gap: 20px;
-
+      padding:15px
 
     }
 
@@ -397,6 +516,12 @@
     .project-nav{
       display: flex;
       justify-content: space-between;
+    }
+
+    .project{
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-template-rows: .20fr 3fr;
     }
   }
 
@@ -411,7 +536,7 @@
         grid-template-columns: 1fr 1fr;
         row-gap:20px;
         margin-bottom: 30px;
-        padding-bottom: 20px;
+        padding-bottom: 10px;
         padding-top: 40px;
       }
     
@@ -528,6 +653,17 @@
 
 }
 
+
+@layer steps{
+  ol{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  li{
+    font-size: var(--font-size-sm);
+  }
+}
 
 
 
