--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -81,6 +81,7 @@
     --clr-purple-600: #6954E9;
     --clr-purple-500: #6954E990;
     --clr-purple-300: #D8BFD8;
+    --clr-purple-bckground: rgba(105, 84, 233, 0.03);    
     --clr-yellow-600: #EA9010;
     --clr-green-600: #04BFDA;
     --clr-white:#fff;
@@ -164,6 +165,12 @@
       background-color: var(--background-main);
     }
 
+    .grid-auto-fit {
+      display:grid;
+      gap: 1rem; 
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
+
     .main-header{
       font-family: var(--ff-heading);
       font-size: var(--font-size-heading-rg);
@@ -222,6 +229,10 @@
 
     .side-nav{
       width: 90rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      
     }
 
     .logo{
@@ -387,23 +398,52 @@
     }
 
     .auth-form{
+      width:30rem;
+      padding: 50px 40px;
+      background: var(--clr-white);
+      border-radius: var(--border-radius-md);
+      margin: auto;
+      box-shadow: 0 6px 8px rgba(0,0,0,0.3);
       display: flex;
       flex-direction: column;
-      width: 400px;
+      input, label {
+        width: 95%;
+        height: 3rem;
+        display: block;
+        margin-inline: auto;
+        margin-bottom: 15px;
+        padding: 10px 12px;
+        color:var(--clr-paragraph-600);
+        border: 2px solid rgba(255,255,255,0.2);
+        box-shadow: var(--clr-shadow);
+        border-radius: var(--border-radius-sm);
+        outline: none;
+        &::placeholder {
+          color: var(--clr-paragraph-500);
+        }
+      }
+      .button{
+        width: 85%;
+        height: 3rem;
+        margin: auto;
+        text-align: center;
+      }
+    }
 
-    }
-    .auth-form > input{
-      min-width:90%;
-      margin-inline: 5px;
-      margin-top: 5px;
-      margin-bottom: 20px;
-      border: 2px solid var(--clr-border);
-      border-radius: var(--border-radius-sm);
-      color: var(--clr-paragraph-500);
-      font-size: small;
-      padding: 5px;
-    }
-    
+    .login-signup-container{
+      display: flex;
+      width: 50rem;
+      height: 38rem;
+      border-radius: var(--border-radius-md);
+      background-color: var(--clr-purple-bckground);
+      p{
+        font-size: var(--font-size-sm);
+        padding-left: 10px;
+      }
+      a{
+        text-decoration: underline;
+        cursor: pointer;
+      }
   }
 
   @layer tables{
@@ -454,7 +494,7 @@
   @layer buttons{
 
     .button{
-      display:inline-flex;
+      /* display:inline-flex; */
       align-items: center;
       font-family: var(--ff-heading);
       text-decoration: none;
@@ -467,7 +507,7 @@
       border:none;
       margin: 25px 5px;
       padding: 1rem 2rem;
-      max-width: fit-content;
+      /* max-width: fit-content; */
     }
     .button:hover,
     .button:focus-visible{
