updated submisisons page to display custom form data as well as display data con csv

--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -535,7 +535,11 @@
     }
 
     table td{
-      padding-bottom: 20px; 
+      padding-bottom: 20px;
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+      max-width: 150px; 
     }
 
     thead{
