removed inline style and added css on the css file

--- a/teacherweb/src/index.css
+++ b/teacherweb/src/index.css
@@ -506,6 +506,10 @@
         margin-inline:5px;
         text-align: center;
       }
+      .section-title{
+        text-align: center;
+        padding-bottom: 7px;
+      }
     }
 
     .login-signup-container{
